# sandboxwich

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  justfile  release-plz.toml
.github/: actionlint.yaml
.github/rulesets/: main.json
.github/workflows/: bump-version.yml  ci.yml  containers.yml  kubernetes-conformance.yml  release-plz.yml  release.yml  tag-release.yml
.superpowers/sdd/: task-3-brief.md  task-3-report.md
crates/sandboxwich-agent/: Cargo.toml
crates/sandboxwich-agent/src/: compiler_cache_archive.rs  main.rs  resident_process_supervisor.rs
crates/sandboxwich-agent/tests/: daemon_resident_process.rs
crates/sandboxwich-api/: Cargo.toml
crates/sandboxwich-api/migrations/: 20260704000100_initial.sql  20260704000200_workers.sql  20260704000300_jobs_leases.sql  20260704000400_guest_health_ssh.sql  20260704000500_snapshots.sql  20260704000600_desktop_sessions.sql  20260704000700_runtime_resources.sql  20260705000100_runtime_reconciliation.sql  20260705000200_cleanup_runs.sql  20260705000300_worker_capacity.sql  20260705000400_command_output_chunks.sql  20260705000500_tenant_boundaries.sql  20260705000600_feedback_fixes.sql  20260705000700_schema_metadata.sql  20260705000800_files_resources_network.sql  20260709000100_worker_tokens.sql  20260709000200_scheduler_reliability.sql  20260709000300_sandbox_placements.sql  20260709000400_idempotency.sql  20260709000500_tenant_limits.sql  20260710000100_divergence_detection.sql  20260710000200_snapshot_tenant_ownership.sql  20260711000100_guest_tokens.sql  20260712000100_provisioning_operations.sql  20260713000100_workspace_modes.sql  20260713000200_provisioning_stage_observations.sql  20260713000300_execution_classes.sql  20260713000400_snapshot_restore_execution_classes.sql  20260714000100_runtime_profiles.sql  20260714000200_snapshot_placement.sql  20260714000300_apex_execution_class_backfill.sql  20260715000100_apex_instruction_reads.sql  20260716000100_lease_completion_fingerprints.sql  20260716000200_resident_processes.sql  20260716000300_sandbox_active_lifetime.sql  20260716000400_sandbox_parent_snapshot_fk.sql  20260716000500_sandbox_activity.sql  20260718000100_resident_bootstrap_consumption.sql  20260718000200_resident_bootstrap_delivery_ack.sql  20260718000300_sidecar_bootstrap_block_rollups.sql  (+3 more)
crates/sandboxwich-api/src/: activity.rs  api_contract.rs  auth.rs  cleanup.rs  config.rs  db.rs  error.rs  handlers.rs  health.rs  idempotency.rs  limits.rs  main.rs  pagination.rs  reap.rs  reconcile.rs  request_id.rs  routes.rs  rows.rs  scheduler.rs  slo_metrics.rs  state.rs  tests.rs  util.rs
crates/sandboxwich-api/src/handlers/: apex_instructions.rs  commands.rs  desktop.rs  divergence.rs  files.rs  homes.rs  jobs.rs  leases.rs  operations.rs  resident_attestations.rs  resident_processes.rs  sandboxes.rs  snapshots.rs  ssh.rs  workers.rs
crates/sandboxwich-api/tests/: http_contract.rs
crates/sandboxwich-api/tests/http_contract/: auth.rs  cleanup.rs  commands.rs  common.rs  desktop.rs  divergence.rs  homes.rs  idempotency.rs  idle_activity.rs  jobs.rs  limits.rs  metrics.rs  public_api.rs  reap.rs  resident_processes.rs  sandboxes.rs  snapshots.rs  types.rs  workers.rs
crates/sandboxwich-bench/: Cargo.toml
crates/sandboxwich-bench/src/: main.rs
crates/sandboxwich-cli/: Cargo.toml
crates/sandboxwich-cli/src/: main.rs
crates/sandboxwich-core/: Cargo.toml
crates/sandboxwich-core/src/: lib.rs
crates/sandboxwich-worker/: Cargo.toml
crates/sandboxwich-worker/src/: egress_gateway.rs  main.rs  provider.rs  worker_tests.rs
crates/sandboxwich-worker/src/provider/: tests.rs
deploy/kubernetes/: api-migrate.yaml  api.yaml  apply-api.sh  cilium-fqdn-conformance.sh  homelab-smoke.sh  kind-bake.hcl  kind-conformance.sh  namespace.yaml  postgres.Dockerfile  worker.yaml
deploy/runtime/ubuntu-dev/: Dockerfile  sandboxwich-entrypoint.sh
docs/: capabilities.md  kubernetes.md  repository-rules.md
docs/plans/: 2026-07-18-orb-placement-attestation.md
docs/superpowers/plans/: 2026-07-11-sandboxwich-improvements.md  2026-07-12-native-images-and-provider-proof.md  2026-07-12-sandboxwich-correctness-hardening.md  2026-07-13-sandboxwich-egress-gateway.md  2026-07-13-sw1-typed-execution-class.md  2026-07-16-orb-resident-process.md
docs/superpowers/specs/: 2026-07-11-sandboxwich-improvements-design.md  2026-07-16-orb-sandboxwich-provider-design.md
scripts/: bump-changelog.sh  release-image-digests.sh  test-cilium-conformance.py  test-deployment-images.py  test-recovery-conformance.py  test-release-readiness.py  test-repository-rules.py  verify-image-provenance.sh
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: 01_create_run_stop.py  02_snapshot_fork.py  03_stream_output.py
sdks/python/src/sandboxwich/: __init__.py  client.py  errors.py  models.py
sdks/python/tests/: test_client.py  test_errors.py
