[workspace]
members = [
    "crates/sandboxwich-agent",
    "crates/sandboxwich-api",
    "crates/sandboxwich-cli",
    "crates/sandboxwich-core",
    "crates/sandboxwich-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/evalops/sandboxwich"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sandboxwich-core = { path = "crates/sandboxwich-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19", features = ["serde", "v7"] }
