[workspace]
members = [
    "crates/sandboxwich-agent",
    "crates/sandboxwich-api",
    "crates/sandboxwich-bench",
    "crates/sandboxwich-cli",
    "crates/sandboxwich-core",
    "crates/sandboxwich-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/evalops/sandboxwich"
rust-version = "1.95"

# Verified against this tree: `cargo build/test --workspace --all-targets`
# and `cargo clippy --workspace --all-targets -- -D warnings` are clean,
# and no `unsafe` blocks exist anywhere, so this floor is enforceable.
# Two pre-existing clippy findings that don't have a clean mechanical fix
# are silenced at their call site instead of here (see the CI PR body for
# details): `enum_variant_names` on the CLI's `Command::Command` variant
# (renaming it would break the CLI's public subcommand name) and
# `too_many_arguments` on a wide test-only insert helper in
# sandboxwich-api's http_contract test.
[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
cap-std = "4.0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ipnet = "2.12"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
sandboxwich-core = { path = "crates/sandboxwich-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19", features = ["serde", "v4", "v7"] }
