[workspace]
members = [
    "crates/sandboxwich-agent",
    "crates/sandboxwich-api",
    "crates/sandboxwich-bench",
    "crates/sandboxwich-cli",
    "crates/sandboxwich-core",
    "crates/sandboxwich-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/evalops/sandboxwich"
rust-version = "1.95"
homepage = "https://github.com/evalops/sandboxwich"
authors = ["EvalOps contributors"]

# Verified against this tree: `cargo build/test --workspace --all-targets`
# and `cargo clippy --workspace --all-targets -- -D warnings` are clean,
# and no `unsafe` blocks exist anywhere, so this floor is enforceable.
# Two pre-existing clippy findings that don't have a clean mechanical fix
# are silenced at their call site instead of here (see the CI PR body for
# details): `enum_variant_names` on the CLI's `Command::Command` variant
# (renaming it would break the CLI's public subcommand name) and
# `too_many_arguments` on a wide test-only insert helper in
# sandboxwich-api's http_contract test.
[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.metadata.release]
# Keep every crate in the workspace on the same version.
shared-version = true
# Only cut releases from the default branch.
allow-branch = ["main"]
# Tag format used by the existing release workflow.
tag-name = "v{{version}}"
tag-message = "release {{version}}"
# The existing release workflow builds and publishes artifacts; don't also
# publish to crates.io from cargo-release.
publish = false
# CI already validates the workspace build; skip the cargo publish dry-run.
verify = false
# Commit the version bumps and changelog update before tagging.
pre-release-commit-message = "chore(release): prepare for {{version}}"
# shared-version above keeps all crates on one version; cargo-release produces
# a single workspace commit and tag by default for shared-version workspaces.
# Update the root CHANGELOG from each crate's hook; the script is idempotent.
pre-release-hook = ["../../scripts/bump-changelog.sh", "{{version}}"]

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
cap-std = "4.0.2"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
flate2 = "1.1"
clap = { version = "4.5", features = ["derive", "env"] }
ipnet = { version = "2.12", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rustix = { version = "1.1", features = ["fs"] }
sandboxwich-core = { path = "crates/sandboxwich-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.27"
hmac = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite", "chrono", "uuid"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19", features = ["serde", "v4", "v7"] }
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
