[package]
name = "sandboxwich-agent"
version = "0.1.1"
description = "Guest-side execution agent for sandboxwich sandboxes"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cap-std.workspace = true
clap.workspace = true
flate2.workspace = true
reqwest.workspace = true
rustix.workspace = true
sandboxwich-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true

[lints]
workspace = true
