[package]
name = "sandboxwich-api"
version = "0.1.0"
description = "HTTP control plane for disposable development sandboxes"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures-core.workspace = true
sandboxwich-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
sqlx.workspace = true
subtle.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
utoipa.workspace = true

[dev-dependencies]
reqwest.workspace = true
sandboxwich-core.workspace = true
tempfile = "3.27"

[lints]
workspace = true
