[package]
name = "sandboxwich-bench"
version = "0.1.1"
description = "Benchmark and regression harness for sandboxwich"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
sandboxwich-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
