[package]
name = "sandboxwich-cli"
version = "0.1.0"
description = "Command-line client for the sandboxwich disposable sandbox control plane"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["sandbox", "kubernetes", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sandboxwich"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
sandboxwich-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
