[package]
name = "sandboxwich-worker"
version = "0.1.0"
description = "Provider worker for the sandboxwich control plane"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ipnet.workspace = true
reqwest.workspace = true
sandboxwich-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true

[lints]
workspace = true
