[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandboxwich"
version = "0.1.0"
description = "Thin typed Python client for the sandboxwich control plane"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "evalops" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sandboxwich"]

[tool.pytest.ini_options]
testpaths = ["tests"]
